--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,11 +59,12 @@
     <Compile Include="Assets\Scripts\CollisionFruit.cs" />
     <Compile Include="Assets\Scripts\ScoreManager.cs" />
     <Compile Include="Assets\Scripts\InputReceiver.cs" />
+    <Compile Include="Assets\Scripts\GameOver.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\FruitsBase.cs" />
     <Compile Include="Assets\Scripts\InitializeFruits.cs" />
     <Compile Include="Assets\Scripts\SpawnFruits.cs" />
-    <Compile Include="Assets\Scripts\GameOver.cs" />
+    <Compile Include="Assets\Scripts\MoveWall.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
