--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,9 +62,10 @@
     <Compile Include="Assets\Scripts\GameOver.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\FruitsBase.cs" />
+    <Compile Include="Assets\Scripts\MoveWall.cs" />
     <Compile Include="Assets\Scripts\InitializeFruits.cs" />
     <Compile Include="Assets\Scripts\SpawnFruits.cs" />
-    <Compile Include="Assets\Scripts\MoveWall.cs" />
+    <Compile Include="Assets\Scripts\FruitsMoveRestrictions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
